--- a/tcf_website/templates/about/history.html
+++ b/tcf_website/templates/about/history.html
@@ -9,7 +9,7 @@
     <div class="col-lg-4 history-img">
       <img src="{% static 'about/2014-team.jpeg' %}"/>
     </div>
-    <div class="col-lg-8 pl-4">
+    <div class="col-lg-8 pl-4 pt-4">
       <h4>Beginnings</h4>
       <p>
           In Fall 2005, UVa students Jeff Bordogna and Alan Webb recognized a need for an online community to help students share their class experiences, and thus developed the first version of theCourseForum. Over time, this simple tool grew and prospered as more and more students found it despite our extraordinarily small marketing budget. The site has now become a fixture of the UVA course signup season to the extent that over 80% of students use the site every year.
@@ -34,9 +34,13 @@
         Our sponsors help us cover server costs from the large amount of traffic that we get. Their help has allowed the site to stay up and running continuously as we keep developing new features.
     </p>
   </div>
-  <div class="d-flex justify-content-around">
-    <img src="{% static 'about/parents_fund.png' %}"/>
-    <img src="{% static 'about/StudCo_Logo.png' %}"/>
+  <div class="row">
+    <div class="col">
+      <img class="img-fluid" src="{% static 'about/parents_fund.png' %}"/>
+    </div>
+    <div class="col">
+      <img class="img-fluid" src="{% static 'about/StudCo_Logo.png' %}"/>
+    </div>
   </div>
 </section>
 
