--- a/tcf_website/templates/base/messages.html
+++ b/tcf_website/templates/base/messages.html
@@ -5,9 +5,14 @@
 {% endblock %}
 
 {% if messages %}
-    <div class="messages content">
+    <div class="content">
         {% for message in messages %}
-            <div class="message">{{ message }}</div>
+            <div class="alert alert-success alert-dismissible fade show" role="alert">
+                {{ message }}
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
         {% endfor %}
     </div>
 {% endif %}
