--- a/tcf_website/templates/base/messages.html
+++ b/tcf_website/templates/base/messages.html
@@ -7,10 +7,10 @@
 {% if messages %}
     <div class="content">
         {% for message in messages %}
-            <div class="alert alert-{{message.tags}} alert-dismissible fade show" role="alert">
+            <div class="alert alert-{{message.tags}} alert-dismissible fade show">
                 {{ message }}
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
+                <button type="button" class="close" data-dismiss="alert">
+                    <span>&times;</span>
                 </button>
             </div>
         {% endfor %}
