--- a/tcf_website/templates/search/search.html
+++ b/tcf_website/templates/search/search.html
@@ -25,7 +25,7 @@
     </div>
     {% else %}
     <div class="container">
-        <h4>Searching courses is down right now!</h4>
+        <h4>No courses matched your search.</h4>
     </div>
     {% endif %}
 
@@ -43,7 +43,7 @@
     </div>
     {% else %}
     <div class="container">
-        <h4>Searching professors is down right now!</h4>
+        <h4>No professors matched your search.</h4>
     </div>
     {% endif %}
 
