--- a/tcf_website/templates/about/about.html
+++ b/tcf_website/templates/about/about.html
@@ -6,6 +6,25 @@
 {% endblock %}
 
 {% block content %}
+<div class="about container">
+  <div class="card">
+    <div class="card-body">
+      <div class="about-logo">
+        <img src="{% static 'base/img/new_logo.png' %}" height="150px">
+        <h1>theCourseForum</h1>
+      </div>
+
+      <hr>
+
+      <p><b>theCourseForum</b> is a place for University of Virginia students to share their academic experiences from classes
+        taken at UVA. The objective being to spread wisdom and knowledge between generations of Wahoos who find themselves
+        struggling to pick classes during enrollment. We see this website as an opportunity to gain a <i>student</i> perspective on
+        specific courses and their professors. <br> <br>
+        <i>Of the students, by the students, for the students...</i>
+      </p>
+    </div>
+  </div>
+</div>
 <div class="browse container">
   <section class="about jumbotron bg-light pb-5">
     <div class="d-flex flex-row">
