--- a/tcf_website/templates/about/about.html
+++ b/tcf_website/templates/about/about.html
@@ -24,6 +24,21 @@
       </p>
     </div>
   </div>
+  <br>
+  <div class="support">
+    <div class="card">
+      <!-- TODO: Create modal for application (sends to Slack) -->
+      <a href="#">
+        <div class="fa fa-code fa-5x"></div>
+      </a>
+    </div>
+    <div class="card">
+      <a href="{% url 'new_review' %}">
+        <div class="fa fa-pencil-square-o fa-5x"></div>
+      </a>
+    </div>
+  </div>
+  <br>
 </div>
 <div class="browse container">
   <section class="about jumbotron bg-light pb-5">
