tweaks + code cleanup

--- a/tcf_website/templates/about/about.html
+++ b/tcf_website/templates/about/about.html
@@ -29,7 +29,7 @@
     <div class="card">
       <!-- TODO: Create modal for application (sends to Slack) -->
       <a href="#">
-        <div class="fa fa-code fa-5x"></div>
+        <div class="fa fa-users fa-5x"></div>
       </a>
     </div>
     <div class="card">
