fixed icon formatting
I referred to the actual fontawesome documentation and formatted them correctly.

--- a/tcf_website/templates/about/about.html
+++ b/tcf_website/templates/about/about.html
@@ -29,12 +29,12 @@
     <div class="card">
       <!-- TODO: Create modal for application (sends to Slack) -->
       <a href="#">
-        <div class="fa fa-users fa-5x"></div>
+        <i class="fas fa-users"></i>
       </a>
     </div>
     <div class="card">
       <a href="{% url 'new_review' %}">
-        <div class="fa fa-pencil-square-o fa-5x"></div>
+        <i class="far fa-edit"></i>
       </a>
     </div>
   </div>
