--- a/tcf_website/static/about/about.css
+++ b/tcf_website/static/about/about.css
@@ -43,6 +43,16 @@
   border-radius: 50%;
 }
 
+.support > .card > a > i {
+  font-size: 5em;
+}
+
+@media (max-width: 500px) {
+  .support > .card > a > i {
+    font-size: 3em;
+  }
+}
+
 .about-nav .about-nav-item a {
   color:rgb(201, 93, 48);
 }
