polished size symmetry

--- a/tcf_website/templates/about/about.html
+++ b/tcf_website/templates/about/about.html
@@ -30,11 +30,13 @@
       <!-- TODO: Create modal for application (sends to Slack) -->
       <a href="#">
         <i class="fas fa-users"></i>
+        <p>Apply to tCF!</p>
       </a>
     </div>
     <div class="card">
       <a href="{% url 'new_review' %}">
         <i class="far fa-edit"></i>
+        <p>Write a Review!</p>
       </a>
     </div>
   </div>
