--- a/tcf_website/static/about/about.css
+++ b/tcf_website/static/about/about.css
@@ -29,9 +29,18 @@
 }
 
 .support > .card {
+  width: 12em;
+  height: 12em;
   border-radius: 50%;
   transform: scale(1.0);
   transition: transform .2s;
+}
+
+@media (max-width: 500px) {
+  .support > .card {
+    width: 8em;
+    height: 8em;
+  }
 }
 
 .support > .card:hover {
@@ -39,8 +48,13 @@
 }
 
 .support > .card > a {
-  padding: 30px;
+  width: auto;
+  height: inherit;
   border-radius: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .support > .card > a > i {
@@ -50,6 +64,16 @@
 @media (max-width: 500px) {
   .support > .card > a > i {
     font-size: 3em;
+  }
+}
+
+.support > .card > a > p {
+  margin: 10px 0px 0px 0px;
+}
+
+@media (max-width: 500px) {
+  .support > .card > a > p {
+    font-size: 10pt;
   }
 }
 
@@ -85,6 +109,12 @@
 
 .about-nav > a > p {
   margin: 5px;
+}
+
+@media (max-width: 500px) {
+  .about-nav > a > p {
+    font-size: 10pt;
+  }
 }
 
 .pfp {
