--- a/tcf_website/templates/about/about.html
+++ b/tcf_website/templates/about/about.html
@@ -23,7 +23,7 @@
     </div>
   </div>
   <br>
-  <div class="support">
+  <div class="about-links">
     <div class="card">
       <!-- TODO: Create modal for application (sends to Slack) -->
       <a href="#">
