added empty javascript file

--- a/tcf_website/templates/about/about.html
+++ b/tcf_website/templates/about/about.html
@@ -3,6 +3,7 @@
 
 {% block styles %}
 <link rel="stylesheet" href="{% static 'about/about.css' %}" />
+<link rel="stylesheet" href="{% static 'about/javascript/switch-subcontent.js' %}" />
 {% endblock %}
 
 {% block content %}
