improved PR readability

--- a/tcf_website/templates/about/about.html
+++ b/tcf_website/templates/about/about.html
@@ -18,10 +18,13 @@
         <h1>theCourseForum</h1>
       </div>
       <hr>
-      <p style="text-align: left;"><b>theCourseForum</b> is a place for University of Virginia students to share their academic experiences from classes
-        taken at UVA. The objective being to spread wisdom and knowledge between generations of Wahoos who find themselves
-        struggling to pick classes during enrollment. We see this website as an opportunity to gain a <i>student</i> perspective on
-        specific courses and their professors. <br> <br>
+      <p style="text-align: left;"><b>theCourseForum</b> is a place for
+        University of Virginia students to share their academic experiences
+        from classes taken at UVA. The objective being to spread wisdom
+        and knowledge between generations of Wahoos who find themselves
+        struggling to pick classes during enrollment. We see this website
+        as an opportunity to gain a <i>student</i> perspective on specific
+        courses and their professors. <br> <br>
         <i>Of the students, by the students, for the students...</i>
       </p>
     </div>
