--- a/tcf_website/templates/about/about.html
+++ b/tcf_website/templates/about/about.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="about container">
+<div class="container">
   <div class="card">
     <div class="card-body">
       <div class="about-logo">
@@ -19,12 +19,12 @@
       </div>
       <hr>
       <p style="text-align: left;"><b>theCourseForum</b> is a place for
-        University of Virginia students to share their academic experiences
-        from classes taken at UVA. The objective being to spread wisdom
-        and knowledge between generations of Wahoos who find themselves
-        struggling to pick classes during enrollment. We see this website
-        as an opportunity to gain a <i>student</i> perspective on specific
-        courses and their professors. <br> <br>
+        University of Virginia students to share their academic experiences.
+        These are captured in the form of course reviews, which provide insight,
+        advice, and caution to students before course enrollment. We believe
+        that reading <i>student</i> reflections is the best way to understand a class and
+        its professor without actually experiencing it.
+        <br> <br>
         <i>Of the students, by the students, for the students...</i>
       </p>
     </div>
