renamed + moved sponsors photos

--- a/tcf_website/templates/about/history.html
+++ b/tcf_website/templates/about/history.html
@@ -63,8 +63,8 @@
       </p>
       <hr>
     </div>
-    <img class="sponsors-img1 img-fluid" src="{% static 'about/parents_fund.png' %}"/>
-    <img class="sponsors-img2 img-fluid" src="{% static 'about/StudCo_Logo.png' %}"/>
+    <img class="sponsors-img1 img-fluid" src="{% static 'about/history/UVA-parents-fund-logo.png' %}"/>
+    <img class="sponsors-img2 img-fluid" src="{% static 'about/history/UVA-student-council-logo.png' %}"/>
   </div>
 </div>
 
