replaced any old logos with the new logo

--- a/tcf_website/templates/base/base.html
+++ b/tcf_website/templates/base/base.html
@@ -8,7 +8,7 @@
     <title>theCourseForum</title>
     <link rel="icon"
       type="image/png"
-      href="{% static 'base/img/logo-orange-small.png' %}">
+      href="{% static 'base/img/new_logo.png' %}">
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="{% static 'base/bootstrap.min.css' %}" />
@@ -50,8 +50,8 @@
     <script src="{% static 'base/bootstrap.bundle.min.js' %}"></script>
     <!-- Menu Toggle Script -->
     <script>
-      
-      /* 
+
+      /*
         This jquery function is CRITICAL to the
         sidebar working properly when clicking
         the navbar-toggler of the navbar.
