--- a/tcf_website/templates/login/login_base.html
+++ b/tcf_website/templates/login/login_base.html
@@ -6,7 +6,7 @@
 <div class="container-fluid col-lg-9 col-xl-7 justify-content-center">
   <div class="card text-center">
     <div class="card-body" style="padding: 25px;">
-        <img style="width: auto; height: 150px;" src="{% static 'base/img/logo-orange-small.png' %}" class="card-img-top" alt="tCF" width="auto">
+        <img style="width: auto; height: 150px;" src="{% static 'base/img/new_logo.png' %}" class="card-img-top" alt="tCF" width="auto">
         {% block login_content %}
         {% endblock %}
     </div>
