--- a/tcf_website/templates/about/about.html
+++ b/tcf_website/templates/about/about.html
@@ -15,7 +15,10 @@
     <div class="card-body">
       <div class="about-logo">
         <img src="{% static 'base/img/new_logo.png' %}" height="150px">
-        <h1>theCourseForum</h1>
+        <div class="tagline">
+          <h1>theCourseForum</h1>
+          <p>connecting you to the courses you love.</p>
+        </div>
       </div>
       <hr>
       <p style="text-align: left;"><b>theCourseForum</b> is a place for
