--- a/tcf_website/static/about/about.css
+++ b/tcf_website/static/about/about.css
@@ -11,10 +11,10 @@
   padding: 30px 0px 20px 0px;
 }
 
-.about-logo > h1 {
-  font-size: 40pt;
-  margin-top: 23px;
-  margin-left: 25px;
+.about-logo > .tagline {
+  display: flex;
+  flex-direction: column;
+  margin: 15px 0px 0px 15px;
 }
 
 .about-links {
